--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,14 @@
     package="com.ccamacho.udemycoursejetpack">
 
     <application
+        android:name=".application.NoteApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".create.CreateActivity"></activity>
+        <activity android:name=".create.CreateActivity"/>
         <activity
             android:name=".navigation.NavigationActivity"
             android:label="@string/app_name">
